fixed loader + added hook for pagination and fixed flickering issue

--- a/Gestion-main/frontend/static/frontend/style.css
+++ b/Gestion-main/frontend/static/frontend/style.css
@@ -992,3 +992,11 @@ and (orientation : portrait) {
 .disabled-btn {
     cursor: not-allowed;
 }
+
+.section-loader-container{
+    width:100%;
+    height:100%;
+    min-height: 300px;
+    display: grid;
+    place-items: center;
+}
